trying to fix horizontal scroll

--- a/styles/partials/_mediaQ.scss
+++ b/styles/partials/_mediaQ.scss
@@ -281,6 +281,10 @@
         display: none;
     }
 
+    .project .projectTitle .projectBackText {
+        display: none;
+    }
+
     .projects .wrapper .projectContainer .project .mockUp {
         width: 375px;
         height: 375px;
